--- a/Mobile App/css/style.css
+++ b/Mobile App/css/style.css
@@ -1,1 +1,49 @@
 /* Stylesheet for Mobile App */
+
+/* Reset */
+html,body,div,p,ul,ol,li,h1,h2,h3,h4,h5,h6
+{
+    margin:0;
+    padding:0;
+}
+
+body{
+    background-color: darkslategray;
+}
+
+div#container{
+    width:1200px;
+    height:800px;
+    border:3px dashed firebrick;
+    background-color: aliceblue;
+}
+
+header{
+    width:91.7%;
+    padding:50px;
+    background-color: beige;
+}
+
+header h1{
+    color:firebrick;
+    font-family: "Tahoma",sans-serif;
+    font-size: 2.5em;
+}
+
+div#content{
+    width:100%;
+    background-color: slategrey;
+}
+
+nav{
+    background-color: darkslateblue;
+    color:ghostwhite;
+    font-family: "Tahoma",sans-serif;
+    font-size: 1.5em
+}
+
+footer{
+    width:1000px;
+    height:500px;
+    background-image: url(https://gifimage.net/wp-content/uploads/2017/11/explosion-sprite-gif-4.gif);
+}
