--- a/Mobile App/css/style.css
+++ b/Mobile App/css/style.css
@@ -12,56 +12,73 @@ body{
 }
 
 div#container{
-    width:1200px;
-    height:800px;
-    border:3px dashed firebrick;
+    width:100%;
+    
+    border:3px solid orange;
     background-color: aliceblue;
 }
 
 header{
     width:91.7%;
     padding:50px;
-    background-color: beige;
+    background-color: #121212;
 }
 
 header h1{
-    color:firebrick;
+    color:orange;
     font-family: "Tahoma",sans-serif;
     font-size: 2.5em;
 }
 
 div#content{
     width:100%;
-    background-color: slategrey;
+    background-color: darkgrey;
 }
 
 nav{
-    background-color: darkslateblue;
-    color:ghostwhite;
+    background-color: whitesmoke;
     font-family: "Tahoma",sans-serif;
     font-size: 1.5em
 }
 nav ul{
     list-style:none;
 }
-nav ul li{
-    float:left;
-    padding:5px 15px;
-    border-right:1px dashed blue;
-}
+
 nav ul li a{
-    color:aqua;
+    color: #121212;
+    float:left;
+    display:block;
+    text-decoration:none;
+    padding:5px 15px;
+    border-right:1.5px solid orange;
 }
 nav ul li a:hover{
-    background-color: azure;
-    color:aquamarine;
+    background-color: #121212;
+    color:whitesmoke;
 }
 
 footer{
-    width:1000px;
-    height:500px;
-    background-image: url(https://gifimage.net/wp-content/uploads/2017/11/explosion-sprite-gif-4.gif);
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    height:50px;
+    background-color: orange;
 }
 div.keepOpen{
     clear:both;
+}
+
+
+
+
+@media screen and (max-width: 600px) {
+    div#container{
+        width:100%;
+    }
+    
+    nav ul li a{
+        float:none;
+        text-align:center;
+    }
 }
