--- a/Mobile App/css/style.css
+++ b/Mobile App/css/style.css
@@ -25,16 +25,17 @@ header{
 }
 
 header h1{
-    color:orange;
+    color:white;
     font-family: "Tahoma",sans-serif;
     font-size: 2.5em;
 }
 
 div#content{
     width:100%;
-    background-color: darkgrey;
+    background-color: #555;
 }
 
+/*
 nav{
     background-color: whitesmoke;
     font-family: "Tahoma",sans-serif;
@@ -56,7 +57,34 @@ nav ul li a:hover{
     background-color: #121212;
     color:whitesmoke;
 }
+*/
+.icon-bar {
+  position:absolute;
+  bottom:0;
+  width: 100%;
+  background-color: #555;
+  overflow: auto;
+}
 
+.icon-bar a {
+  float: left;
+  width: 20%;
+  text-align: center;
+  padding: 12px 0;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 36px;
+}
+
+.icon-bar a:hover {
+  background-color: #121212;
+}
+
+.active {
+  background-color: #ffa20e;
+}
+
+/*
 footer{
     position:absolute;
     bottom:0;
@@ -81,4 +109,4 @@ div.keepOpen{
         float:none;
         text-align:center;
     }
-}
+}*/
